chore: add uni-table and brand keywords to package.json for better NPM search

--- a/projects/uni-table/package.json
+++ b/projects/uni-table/package.json
@@ -16,6 +16,9 @@
   "homepage": "https://github.com/Unify-India/uni-table#readme",
   "license": "MIT",
   "keywords": [
+    "uni-table",
+    "unify-india",
+    "unify",
     "angular",
     "table",
     "datatable",
